Fixes a few bugs

--- a/src/app/show-character/character-inventory/character-inventory.component.html
+++ b/src/app/show-character/character-inventory/character-inventory.component.html
@@ -35,7 +35,7 @@
   </mat-card>
   <mat-card *ngFor="let si of character.getSlottedContainers()">
     <h2>{{si.inventoryString(false)}}</h2>
-    <h3 [class.overfull]="si.load() >= si.capacity">{{si.capacityString()}}</h3>
+    <h3 [class.overfull]="si.load() - si.weight > si.capacity ">{{si.capacityString()}}</h3>
     <item-list [capacity]="si.slots" [items]="si.contents"></item-list>
   </mat-card>
 </div>
