--- a/src/app/show-character/character-spell-book/character-spell-slots/character-spell-slots.component.html
+++ b/src/app/show-character/character-spell-book/character-spell-slots/character-spell-slots.component.html
@@ -1,13 +1,12 @@
 <h2>Spell Slots</h2>
 <mat-tab-group>
-  <mat-tab *ngFor="let spellGroup of character.spells" label="Level {{spellGroup.level}}">
+  <mat-tab *ngFor="let spellGroup of character.getMemorizedSpells()" label="Level {{spellGroup.level}}">
     <mat-list cdkDropList (cdkDropListDropped)="drop($event, spellGroup)" [cdkDropListData]="spellGroup.spells">
       <mat-list-item *ngFor="let spell of spellGroup.spells; let j = index" cdkDrag>
         Slot {{j + 1}}:&nbsp;
-        <div *ngIf="spell">{{spell.name}} (Level {{spell.level}})
+        <div *ngIf="spell" matTooltip="{{spell.description}}">{{spell.name}} (Level {{spell.level}})
           <button class="use-spell-button" color="warn" mat-mini-fab (click)="removeSpell(spellGroup,j)"><mat-icon>remove</mat-icon></button>
         </div>
-
         <mat-divider></mat-divider>
       </mat-list-item>
     </mat-list>
