--- a/src/app/show-character/character-experience/character-experience.component.html
+++ b/src/app/show-character/character-experience/character-experience.component.html
@@ -5,7 +5,7 @@
       <h2>Experience Block {{i + 1}}</h2>
       <mat-list-item><span>Class: </span> {{experience.class}} </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item><span>Bonus %: </span> {{experience.bonus_xp}} </mat-list-item>
+      <mat-list-item><span>Bonus Experience:&nbsp;</span> {{experience.bonus_xp}}% </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item><span>Level: </span> {{experience.currentLevel()}} </mat-list-item>
       <mat-divider></mat-divider>
