--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -1,5 +1,5 @@
 <h1 class="section-title">{{character.name}}</h1>
-<h2 class="section-subtitle"> Level {{character.getLevel()}} {{character.race}} {{character.class}}</h2>
+<h2 class="section-subtitle"> Level {{character.getLevel()}} {{character.race}} {{character.getClass()}}</h2>
 <div id="overview" class="container">
   <mat-card>
     <mat-icon *ngIf="editing!='stats'" color='primary' (click)="editSection('stats')" class="edit">edit</mat-icon>
@@ -7,7 +7,7 @@
       <h2>Stats</h2>
       <mat-list-item><span>Name: &nbsp;</span> {{character.name}} </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item><span>Class: &nbsp;</span> {{character.class}} </mat-list-item>
+      <mat-list-item><span>Class: &nbsp;</span> {{character.getClass()}} </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item><span>Age: &nbsp;</span> {{character.age}} </mat-list-item>
       <mat-divider></mat-divider>
@@ -28,7 +28,7 @@
         <mat-list-item>
           <mat-form-field>
             <mat-label>Class:</mat-label>
-            <mat-select [(ngModel)]="character.class">
+            <mat-select [(ngModel)]="character.experience[0].class">
               <mat-option *ngFor="let class of classes" [value]="class">
                 {{class}}
               </mat-option>
