added will section in notes component and char

--- a/src/app/show-character/character-notes/character-notes.component.html
+++ b/src/app/show-character/character-notes/character-notes.component.html
@@ -12,4 +12,8 @@
     <h2 class="section-subtitle">Active Jobs and Quests</h2>
     <textarea [(ngModel)]="character.quests">{{character.quests}}</textarea>
   </mat-card>
+  <mat-card>
+    <h2 class="section-subtitle">Will</h2>
+    <textarea [(ngModel)]="character.will">{{character.will}}</textarea>
+  </mat-card>
 </div>
