--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,34 +3,51 @@
     <app-links></app-links>
     <button mat-raised-button color="primary" (click)="exportGame()">Export
       <mat-icon>arrow_downward</mat-icon>
-    </button><br />
+    </button>
+    <br/>
     <button mat-icon-button color="warn" routerLink="/raw-edit">
       <mat-icon>settings</mat-icon>
     </button>
   </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar id="navigation">
-      <a id="site-title" routerLink="/">Revived Character Sheet</a>
-      <app-links></app-links>
-      <div>
-        <button class="menu-hamburger" mat-icon-button (click)="toggleMenu()">
-          <mat-icon>menu</mat-icon>
-        </button>
-        <button mat-raised-button color="primary" (click)="exportGame()">Export
-          <mat-icon>arrow_downward</mat-icon>
-        </button>
-        <button mat-icon-button color="warn" routerLink="/raw-edit">
-          <mat-icon>settings</mat-icon>
-        </button>
-      </div>
+        <a id="site-title" routerLink="/">Revived Character Sheet</a>
+        <app-links></app-links>
+        <div>
+          <button class="menu-hamburger" mat-icon-button (click)="toggleMenu()">
+            <mat-icon>menu</mat-icon>
+          </button>
+          <button mat-raised-button color="primary" (click)="exportGame()">Export
+            <mat-icon>arrow_downward</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" routerLink="/raw-edit">
+            <mat-icon>settings</mat-icon>
+          </button>
+        </div>
     </mat-toolbar>
+    <div *ngFor="let character of [gameService.getGame().getCharacter()]" id="character-summary">
+      {{character.name}} |
+      {{character.getClass()}} {{character.getLevel()}} |
+      STR {{character.adjustedAbilityString('strength')}} |
+      INT {{character.adjustedAbilityString('intelligence')}} |
+      WIS {{character.adjustedAbilityString('wisdom')}} |
+      DEX {{character.adjustedAbilityString('dexterity')}} |
+      CON {{character.adjustedAbilityString('constitution')}} |
+      CHA {{character.adjustedAbilityString('charisma')}}
+    </div>
+
     <router-outlet></router-outlet>
-    <button *ngIf="!gameService.lock" (click)='lockPage()' class="lock-icon" mat-mini-fab><mat-icon>lock</mat-icon></button>
-    <button *ngIf="gameService.lock" (click)='lockPage()' color="warn" class="lock-icon" mat-mini-fab><mat-icon>vpn_key</mat-icon></button>
+    <button *ngIf="!gameService.lock" (click)='lockPage()' class="lock-icon" mat-mini-fab>
+      <mat-icon>lock</mat-icon>
+    </button>
+    <button *ngIf="gameService.lock" (click)='lockPage()' color="warn" class="lock-icon" mat-mini-fab>
+      <mat-icon>vpn_key</mat-icon>
+    </button>
     <mat-toolbar id="footer">
       <a routerLink="/">Revived Character Sheet</a>
       <small id="copyright">Copyright &copy; {{year}} Justin Edwards. All Rights Reserved. (for now)</small>
-      <a id="github-logo"  href="https://github.com/xrnm/odnd-character-sheet"><img src="/assets/images/github_logo.png" />GitHub</a>
+      <a id="github-logo" href="https://github.com/xrnm/odnd-character-sheet"><img
+        src="/assets/images/github_logo.png"/>GitHub</a>
     </mat-toolbar>
   </mat-sidenav-content>
 </mat-sidenav-container>
