--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,5 +1,6 @@
 mat-toolbar
   position: relative
+  z-index: 201
   div
     position: absolute
     right: 4px
@@ -39,6 +40,18 @@ mat-sidenav-container
   bottom: 68px
   right: 16px
   z-index: 15
+
+#character-summary
+  position: fixed
+  text-align: center
+  top: 0
+  left: 0
+  right: 0
+  z-index: 100
+  background-color: white
+  font-size: 14pt
+  font-family: Cinzel
+  padding: 4px
 
 @media screen and (max-width: 1366px)
   .lock-icon
