--- a/src/app/show-character/item-list/item/item.component.html
+++ b/src/app/show-character/item-list/item/item.component.html
@@ -1,5 +1,7 @@
 <mat-list-item *ngIf="!item.deleted">
-  <div [class.empty]="item.quantity==0" matTooltip="{{item.description}}">{{item.inventoryString()}}</div>
+  <div [class.empty]="item.quantity==0" matTooltip="{{item.description}}">
+    {{item.inventoryString()}}
+  </div>
   <div class="mat-list-actions">
     <button [disabled]="item.quantity < 1" (click)="consume(item, $event)" mat-icon-button color="warn"
             aria-label="Consume Item">
