--- a/src/app/show-character/character-overview/character-overview.component.sass
+++ b/src/app/show-character/character-overview/character-overview.component.sass
@@ -32,6 +32,9 @@
       font-size: 20px
     strong
       font-size: 28px
+      #hpmax
+        font-size: 10px
+        font-weight: normal
     p
       text-align: left
       font-size: 28px
