--- a/src/app/app.component.sass
+++ b/src/app/app.component.sass
@@ -1,6 +1,7 @@
 mat-toolbar
   position: relative
-  z-index: 201
+  z-index: 1
+  margin-top: 25px
   div
     position: absolute
     right: 4px
@@ -52,6 +53,21 @@ mat-sidenav-container
   font-size: 14pt
   font-family: Cinzel
   padding: 4px
+
+#character-movement-summary
+  position: fixed
+  text-align: center
+  bottom: 0
+  left: 0
+  right: 0
+  z-index: 100
+  background-color: white
+  font-size: 14pt
+  font-family: Cinzel
+  padding: 4px
+
+#footer
+  margin-bottom: 25px
 
 @media screen and (max-width: 1366px)
   .lock-icon
