--- a/src/styles.sass
+++ b/src/styles.sass
@@ -79,3 +79,7 @@ mat-dialog-content
   mat-form-field
     width: 60%
     margin: 0 auto
+
+.unequip-icon
+  padding: 0 10px
+  vertical-align: middle
