--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -167,7 +167,7 @@
       </mat-list-item>
       <mat-list-item>
         <mat-form-field>
-          <mat-label>Eyes Color:</mat-label>
+          <mat-label>Eye Color:</mat-label>
           <input matInput [(ngModel)]="character.eye_color"/>
         </mat-form-field>
       </mat-list-item>
