dropped item enhancements

--- a/src/app/show-character/character-inventory/character-inventory.component.html
+++ b/src/app/show-character/character-inventory/character-inventory.component.html
@@ -35,7 +35,7 @@
     </mat-list>
   </mat-card>
   <mat-card *ngFor="let si of character.getSlottedContainers()">
-    <h2>{{si.inventoryString(false)}}</h2>
+    <h2><span *ngIf="si.unequipped">Dropped</span> {{si.inventoryString(false)}} </h2>
     <h3 [class.overfull]="si.isOverfull()">{{si.capacityString()}}</h3>
     <item-list [capacity]="si.slots" [items]="si.contents"></item-list>
   </mat-card>
