--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
         DEX {{character.adjustedAbilityString('dexterity')}} |
         CON {{character.adjustedAbilityString('constitution')}} |
         CHA {{character.adjustedAbilityString('charisma')}} |
-        TH +{{character.meleeToHit()}} +{{character.missileToHit()}}
+        To-Hit +{{character.meleeToHit()}} +{{character.missileToHit()}}
       </div>
     </div>
     <router-outlet></router-outlet>
