--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -72,8 +72,8 @@
       <mat-divider></mat-divider>
       <mat-list-item><span>Profession:&nbsp;</span> {{character.profession}} </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item><span>Speaks:&nbsp;</span>
-        {{character.known_languages.concat(' ')}}
+      <mat-list-item><span>Known Languages:&nbsp;</span>
+        {{character.known_languages}}
       </mat-list-item>
       <mat-divider></mat-divider>
     </mat-list>
