--- a/src/app/show-character/character-experience/character-experience.component.sass
+++ b/src/app/show-character/character-experience/character-experience.component.sass
@@ -1,3 +1,12 @@
+h2
+  a
+    text-transform: uppercase
+    font-family: Cinzel
+    color: rgba(0,0,0,.87)
+    padding-right: 25px
+  button
+    vertical-align: middle
+
 #experience
   justify-content: space-between
   mat-card
