--- a/src/app/hirelings/hirelings.component.html
+++ b/src/app/hirelings/hirelings.component.html
@@ -15,6 +15,7 @@
       <character-experience [character]="character"></character-experience>
       <character-purse [character]="character"></character-purse>
       <character-inventory [character]="character"></character-inventory>
+      <adventure-log-experience-blocks [blocks]="character.experience"></adventure-log-experience-blocks>
       <character-notes [character]="character"></character-notes>
     </mat-tab>
   </mat-tab-group>
