--- a/src/app/show-character/character-attributes/character-attributes.component.html
+++ b/src/app/show-character/character-attributes/character-attributes.component.html
@@ -1,6 +1,6 @@
 <h2 class="section-subtitle"> Abilities </h2>
 <div id="abilities" class="container">
-  <mat-card ngClass="{{character.primeAbility() === 'strength' ? 'prime' : ''}}">
+  <mat-card ngClass="{{character.abilityIsPrime('strength') ? 'prime' : ''}}">
     <mat-icon *ngIf="character.hasPositiveAbilityAdjustment('strength')" color="primary" class="ability-info-icon" matTooltip="Your high strength compels to you an additional +1 damage to melee and thrown attacks">info</mat-icon>
     <h4>Strength</h4>
     <button (click)="changeAbility('strength',-1)" mat-icon-button color="warn">
@@ -10,9 +10,9 @@
     <button (click)="changeAbility('strength',1)" mat-icon-button color="primary">
       <mat-icon>add</mat-icon>
     </button>
-    <p class="prime-text" *ngIf="character.primeAbility() == 'strength'">Prime</p>
+    <p class="prime-text" *ngIf="character.abilityIsPrime('strength')">Prime</p>
   </mat-card>
-  <mat-card ngClass="{{character.primeAbility() === 'intelligence' ? 'prime' : ''}}">
+  <mat-card ngClass="{{character.abilityIsPrime('intelligence') ? 'prime' : ''}}">
     <mat-icon *ngIf="character.hasPositiveAbilityAdjustment('intelligence')" color="primary" class="ability-info-icon" matTooltip="Your high intellect compels to you one additional spoken language for each point above 10 ">info</mat-icon>
     <mat-icon *ngIf="character.hasNegativeAbilityAdjustment('intelligence')" color="primary" class="ability-info-icon" matTooltip="Your weak intellect renders you unable to read or write">info</mat-icon>
     <h4>Intelligence</h4>
@@ -23,20 +23,20 @@
     <button (click)="changeAbility('intelligence',1)" mat-icon-button color="primary">
       <mat-icon>add</mat-icon>
     </button>
-    <p class="prime-text" *ngIf="character.primeAbility() == 'intelligence'">Prime</p>
+    <p class="prime-text" *ngIf="character.abilityIsPrime('intelligence')">Prime</p>
   </mat-card>
-  <mat-card ngClass="{{character.primeAbility() === 'wisdom' ? 'prime' : ''}}">
+  <mat-card ngClass="{{character.abilityIsPrime('wisdom') ? 'prime' : ''}}">
     <mat-icon *ngIf="character.hasPositiveAbilityAdjustment('wisdom')" color="primary" class="ability-info-icon" matTooltip="Your high wisdom compels to you an additional +10% comprehend spoken language for every point above 10">info</mat-icon>
     <h4>Wisdom</h4>
     <button (click)="changeAbility('wisdom',-1)" mat-icon-button color="warn">
       <mat-icon>remove</mat-icon>
     </button>
     <strong>{{character.abilities.wisdom}}<span
-      *ngIf="character.primeAbility() == 'wisdom'"> + {{character.getLevel()}}</span></strong>
+      *ngIf="character.abilityIsPrime('wisdom')"> + {{character.getLevel()}}</span></strong>
     <button (click)="changeAbility('wisdom',1)" mat-icon-button color="primary">
       <mat-icon>add</mat-icon>
     </button>
-    <p class="prime-text" *ngIf="character.primeAbility() == 'wisdom'">Prime</p>
+    <p class="prime-text" *ngIf="character.abilityIsPrime('wisdom')">Prime</p>
   </mat-card>
   <mat-card>
     <mat-icon *ngIf="character.hasPositiveAbilityAdjustment('dexterity')" color="primary" class="ability-info-icon" matTooltip="Your high dexterity compels to you an additional +1 damage on missile attacks">info</mat-icon>
