more multiclassing work

--- a/src/app/adventure-log/adventure-log.component.html
+++ b/src/app/adventure-log/adventure-log.component.html
@@ -1,3 +1,3 @@
 <adventure-log-notes [notes]="notes"></adventure-log-notes>
 <adventure-log-sessions [sessions]="sessions"></adventure-log-sessions>
-<adventure-log-experience-blocks [blocks]="experienceBlocks"></adventure-log-experience-blocks>
+<adventure-log-experience-blocks [character]="character"></adventure-log-experience-blocks>
