--- a/src/app/adventure-log/experience-blocks/experience-blocks.component.sass
+++ b/src/app/adventure-log/experience-blocks/experience-blocks.component.sass
@@ -1,8 +1,14 @@
+.add-experience
+  width: 100%
+  text-align: center
+  .add-experience-button
+    margin: 12px auto
 #blocks-section
+  display: flex
   h3
     text-align: center
-  div
-    width: 100%
+  > div
+    width: 47%
     mat-form-field
       width: 100%
   .add-experience
