--- a/src/app/show-character/character-experience/character-experience-dialog/character-experience-dialog.component.html
+++ b/src/app/show-character/character-experience/character-experience-dialog/character-experience-dialog.component.html
@@ -18,7 +18,7 @@
   <br />
   <p *ngFor="let block of character.experience; let i = index">
   {{block.class}}:&nbsp;{{ character.getBlockExperience(experience, i)}} +
-    {{block.bonus_xp}}% Bonus = {{block.applyBonus(character.getBlockExperience(experience,i))}}
+    {{block.bonus_xp}}% Bonus = {{block.applyBonus(character.getBlockExperience(experience,i))}} of {{block.experienceForNextLevel()}}
   </p>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
