--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -89,7 +89,7 @@
       </mat-list-item>
       <mat-list-item>
         <mat-form-field>
-          <mat-label>Speaks:</mat-label>
+          <mat-label>Known Languages:</mat-label>
           <input matInput [(ngModel)]="character.known_languages"/>
         </mat-form-field>
       </mat-list-item>
