--- a/src/app/show-character/character-experience/character-experience.component.sass
+++ b/src/app/show-character/character-experience/character-experience.component.sass
@@ -11,6 +11,12 @@ h2
   justify-content: space-between
   mat-card
     width: 45%
+    .experience-edit
+      position: absolute
+      top: 5px
+      right: 5px
+      &:hover
+        cursor: pointer
   .detail-button
     position: absolute
     right: 8px
