--- a/src/app/show-character/character-experience/character-experience.component.sass
+++ b/src/app/show-character/character-experience/character-experience.component.sass
@@ -11,16 +11,29 @@ h2
   justify-content: space-between
   mat-card
     width: 45%
+    button
+      margin: 0 auto
     .experience-edit
       position: absolute
       top: 5px
       right: 5px
       &:hover
         cursor: pointer
+    mat-form-field
+      margin: 0 auto
+      width: 100%
   .detail-button
     position: absolute
     right: 8px
     bottom: 8px
+  .new-class
+    .table
+      width: 100%
+      height: 100%
+      display: table
+      .table-cell
+        vertical-align: middle
+        display: table-cell
 
 @media screen and (max-width: 820px)
   #experience
