--- a/src/app/show-character/character-experience/character-experience.component.html
+++ b/src/app/show-character/character-experience/character-experience.component.html
@@ -5,7 +5,7 @@
   </button>
 </h2>
 <div id="experience" class="container">
-  <mat-card *ngFor="let experience of character.experience; let i  = index;">
+  <mat-card *ngFor="let experience of character.getExperience(); let i  = index;">
     <mat-icon class='experience-edit' color="primary" *ngIf="editing!=i" (click)="editing = i">edit</mat-icon>
     <mat-list dense *ngIf="editing!=i">
       <h2>Experience Block {{i + 1}}</h2>
@@ -26,6 +26,7 @@
     </mat-list>
 
     <mat-list dense *ngIf="editing==i">
+      <mat-icon class='experience-edit' color="warn" *ngIf="editing==i" (click)="confirmDelete(experience)">delete</mat-icon>
       <h2>Experience Block {{i + 1}}</h2>
       <mat-list-item>
         <mat-form-field>
