--- a/src/app/show-character/character-experience/character-experience-dialog/character-experience-dialog.component.html
+++ b/src/app/show-character/character-experience/character-experience-dialog/character-experience-dialog.component.html
@@ -17,7 +17,7 @@
   </mat-form-field>
   <br />
   <p *ngFor="let block of character.getExperience(); let i = index">
-  {{block.class}}:&nbsp;{{ character.getBlockExperience(experience, i)}} +
+  {{block.class}} ({{character.getAbilityAbbreviation(block.prime)}}):&nbsp;{{ character.getBlockExperience(experience, i)}} +
     {{block.bonus_xp}}% Bonus = {{block.applyBonus(character.getBlockExperience(experience,i))}} of {{block.experienceNeededForNextLevel()}}
   </p>
 </mat-dialog-content>
