--- a/src/app/show-character/character-experience/character-experience.component.sass
+++ b/src/app/show-character/character-experience/character-experience.component.sass
@@ -11,6 +11,7 @@ h2
   justify-content: space-between
   mat-card
     width: 45%
+    margin-bottom: 24px
     button
       margin: 0 auto
     .experience-edit
