--- a/src/app/show-character/character-experience/character-experience.component.html
+++ b/src/app/show-character/character-experience/character-experience.component.html
@@ -26,7 +26,7 @@
     </mat-list>
 
     <mat-list dense *ngIf="editing==i">
-      <mat-icon class='experience-edit' color="warn" *ngIf="editing==i" (click)="confirmDelete(experience)">delete</mat-icon>
+      <mat-icon class='experience-edit' color="warn" *ngIf="editing==i&&character.getExperience().length>1" (click)="confirmDelete(experience)">delete</mat-icon>
       <h2>Experience Block {{i + 1}}</h2>
       <mat-list-item>
         <mat-form-field>
@@ -40,7 +40,7 @@
       </mat-list-item>
       <mat-list-item>
         <mat-form-field>
-          <mat-label>Class:</mat-label>
+          <mat-label>Prime Requisite:</mat-label>
           <mat-select [(ngModel)]="experience.prime">
             <mat-option *ngFor="let prime of abilities" [value]="prime">
               {{prime}}
@@ -49,15 +49,15 @@
         </mat-form-field>
       </mat-list-item>
       <mat-list-item>
-        <button mat-raised-button color="primary" (click)="editing = -1">Done</button>
+        <button mat-raised-button color="primary" (click)="doneEditing()">Done</button>
       </mat-list-item>
 
     </mat-list>
   </mat-card>
-  <mat-card class="new-class">
+  <mat-card class="new-class" *ngIf="canAddClass()">
     <div class="table">
       <div class="table-cell">
-        <button class="add-experience-block" color="primary" mat-mini-fab (click)="addExperinceBlock()">
+        <button class="add-experience-block" color="primary" mat-mini-fab (click)="addExperienceBlock()">
           <mat-icon>add</mat-icon>
         </button>
         <h1>Add a class</h1>
