--- a/src/app/show-character/character-overview/character-overview.component.html
+++ b/src/app/show-character/character-overview/character-overview.component.html
@@ -1,5 +1,5 @@
 <h1 class="section-title">{{character.name}}</h1>
-<h2 class="section-subtitle"> Level {{character.getLevel()}} {{character.race}} {{character.getInitialClass()}}</h2>
+<h2 *ngFor="let block of character.getExperience()" class="section-subtitle"> Level {{block.currentLevel()}} {{character.race}} {{block.class}}</h2>
 <div id="overview" class="container">
   <mat-card>
     <mat-icon *ngIf="editing!='stats'" color='primary' (click)="editSection('stats')" class="edit">edit</mat-icon>
@@ -7,7 +7,7 @@
       <h2>Stats</h2>
       <mat-list-item><span>Name: &nbsp;</span> {{character.name}} </mat-list-item>
       <mat-divider></mat-divider>
-      <mat-list-item><span>Class: &nbsp;</span> {{character.getInitialClass()}} </mat-list-item>
+      <mat-list-item><span>Class: &nbsp;</span> {{character.getConciseClassLevelString()}} </mat-list-item>
       <mat-divider></mat-divider>
       <mat-list-item><span>Age: &nbsp;</span> {{character.age}} </mat-list-item>
       <mat-divider></mat-divider>
@@ -214,7 +214,7 @@
     <mat-icon *ngIf="editing!='hitpoints' && character.hasPositiveAbilityAdjustment('constitution')" color="primary" class="ability-info-icon" matTooltip="Your high constitution compels to you an additional hit point for per whole hit die">info</mat-icon>
     <h4>Hit Points</h4>
     <div *ngIf="editing!='hitpoints'">
-    <strong><span class="current-hp">{{character.current_hp}}&nbsp;</span> / {{character.total_hp}}<span id="hpmax">Max</span></strong>
+    <strong><span class="current-hp">{{character.current_hp}}</span> / {{character.total_hp}}<span id="hpmax">Max</span></strong>
     <div id="hp-area">
       <button (click)="changeCharacter('current_hp',-1)" class="hp-button current-remove" mat-mini-fab color="warn">
         <mat-icon>remove</mat-icon>
